hphp/test/zend/good/ext/curl/tests/curl_multi_select_basic1.php.skipif
<?php if (!extension_loaded("curl")) print "skip"; ?>