hphp/test/zend/bad/ext/mbstring/tests/mb_ereg2.php.skipif
<?php if (!function_exists("mb_ereg")) print "skip"; ?>